# bloomc

./: CMakeLists.txt  README.md  run.sh
docs/examples/: calc.blm  sum.blm
include/bloom/: allocation.h  array.h  assert.h  defer.h  log.h  parsing.h  print.h  ptr.h  string.h  tokenization.h  transpilation.h  types.h
src/: allocation.cpp  allocation.h  array.h  main.cpp  parsing.cpp  print.cpp  run_doctests.py  string.cpp  string.h  tokenization.cpp  tokenization.h  transpilation.cpp
